--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
-      <button class="otoshidama"></button>
+      <h1 class="logo">
+        <a href="/index.html">
+          <img class="pochi-logo" src="assets/pochi.svg" alt="ポチ"/>
+          <span class="title">おポチマン</span>
+        </a>
+      </h1>
+      <button class="otoshidama">もらった金額</button>
     </header>
     <main>
       <canvas>
