mainの内容を軽く整理

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
       <button class="otoshidama">もらった金額</button>
     </header>
     <main>
-      <canvas>
-      </canvas>
-      <ol>
-        <li>欲しい物</li>
-      </ol>
+      <canvas id="treemapView"></canvas>
+      <div class="wishlist">
+        <div class="wishlist-title">
+          <h2>欲しい物リスト</h2>
+          <button>追加</button>
+        </div>
+        <ol>
+          <li>欲しい物</li>
+        </ol>
+      </div>
     </main>
   </body>
 </html>
