ページタイトルを修正

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
-    <title>PWA template</title>
+    <title>おポチマン</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="manifest" href="manifest.json"/>
     <script>
