キャンバスの初期化まで書いた

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script>
       navigator.serviceWorker.register("./sw.js")
     </script>
+    <script src="main.js" type="module"></script>
   </head>
   <body>
     <header>
