もらった金額の表示を改善

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         <span class="title">おポチマン</span>
       </a>
     </h1>
-    <h3>もらった金額：</h3>
-    <div id="money_output"></div>
-    <h3>円</h3>
+    <div class="amount">
+      <h3>もらった金額：</h3>
+      <span id="money_output"></span>
+      <h3>円</h3>
+    </div>
     <button id="otoshidama">もらった金額を入力</button>
     <dialog id="money_modal">
       <div class="modal-content">
