--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <dialog id="money_modal">
       <div class="modal-content">
         <div class="modal-header">
-          <h2>もらった金額</h2>
+          <h2>もらった金額を入力</h2>
         </div>
         <div class="modal-body">
           <form id="money_input">
             <label>
-              もらった金額を入力<input type="number" id="money">
+              もらった金額<input type="number" id="money">
             </label>
             <button id="money_submit" onclick="set_money()">決定</button>
             <button id="cancel">キャンセル</button>
@@ -56,17 +56,23 @@
         <button id="show-add-wishlist-form">追加</button>
       </div>
       <ol>
-        <li>欲しい物</li>
       </ol>
     </div>
   </main>
   <dialog id="wish-list-form">
-    <form>
-      <label>欲しい物</label><input type="text" id="item-input" required>
-      <label>値段</label><input type="number" id="price-input" required>
-      <button id="add-item-button">追加</button>
-      <button id="close-add-wish-form">キャンセル</button>
-    </form>
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>欲しい物を追加</h2>
+      </div>
+      <div class="modal-body">
+        <form>
+          <label>欲しい物</label><input type="text" id="item-input" required>
+          <label>値段</label><input type="number" id="price-input" required>
+          <button id="add-item-button">追加</button>
+          <button id="close-add-wish-form">キャンセル</button>
+        </form>
+      </div>
+    </div>
   </dialog>
   <script>
     if (!localStorage.getItem('money')) {
