--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     navigator.serviceWorker.register("./sw.js")
   </script>
   <script type="module" src="index.js"></script>
-  <script src="main.js" type="module"></script>
+  <script type="module" src="canvas.js"></script>
 </head>
 
 <body>
