欲しい物リストの文字数を制限
欲しい物リストの文字数を日本語で1列表記できる10文字までに制限

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
         <form>
           <div class="inputs">
             <div class="input-row">
-              <label>欲しい物</label><input type="text" id="item-input" required>
+              <label>欲しい物</label><input type="text" maxlength="10" id="item-input" required>
             </div>
+            <p>※10文字まで</p>
             <div class="input-row">
               <label>値段</label><input type="number" id="price-input" required>
             </div>
